add gem sqlite3

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,8 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: postgresql
-  database: my_database_development
-  pool: 5
-  timeout: 5000
+  <<: *default
+    database: db/test.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -23,5 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: my_database_development
+  pool: 5
+  timeout: 5000
+
