--- a/config/database.yml
+++ b/config/database.yml
@@ -7,19 +7,16 @@
 
 
 development:
-  <<: *default
-    database: db/test.sqlite3
+  adapter: sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: sqlite3
   database: db/test.sqlite3
 
 production:
   adapter: postgresql
-  database: my_database_development
-  pool: 5
-  timeout: 5000
 
